--- a/pvs.Rmd
+++ b/pvs.Rmd
@@ -9,7 +9,7 @@ output:
     number_sections: yes
     theme: readable
 abstract: >
-  This document details the changes to the Physical Volume Store and releated classes in `artg4`. These changes are discussed as well as the schema evolution necessary to maintain backwards compatibility with old files. Aggregation code for reading a file that was produced by merging input files will be shown. Finally, there are some nuances with merging files that must be respected -- event numbers must not overlap. That problem is explained and some solutions are given.  
+  This document details the changes to the Physical Volume Store and releated classes in `artg4`. These changes are discussed as well as the schema evolution necessary to maintain backwards compatibility with old files. Aggregation code for reading a file that was produced by merging input files will also be shown. Furthermore, there are some nuances with merging files that must be respected -- event numbers must not overlap. That problem is explained and some solutions are given. The document ends with covering the testing procedure. 
 ---
 
 ```{r setup, include=FALSE}
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-The `gm2ringsim` Geant simulation for the Muon g-2 apparatus consists of several thousand volumes, each with a name. Some of the names are rather long, like `VacuumChamberCadMeshWallPV[06]` and `SingleStrawPV - 18 ~ 4 ~ 1 ~ 1 ~ 14`. Many of our hit and track data products record the volume that was involved in the particular interaction. Such information is useful in many studies, such as determining the effects of materials. One could save the volume name in these data products, but that would make their memory and disk footprint large. Furthermore, since many volumes are hit many times, it means that some strings would be repeated often. Root compression likely keeps the disk footprint small, but once loaded into memory the memory needed could get to be large. An obvious solution is to assign an identification label (preferably in a small number of bytes) to each volume name and store the ID value in the hit and track data products. There must also be a mapping table stored somewhere in order to translate the IDs back into the strings for analysis. This table is called the _Physical Volume Store_. 
+The `gm2ringsim` Geant simulation for the Muon g-2 apparatus consists of several thousand volumes, each with a name. Some of the names are rather long, like `VacuumChamberCadMeshWallPV[06]` and `SingleStrawPV - 18 ~ 4 ~ 1 ~ 1 ~ 14`. Many of our hit and track data products record the volume that was involved in the particular interaction. Such information is useful in many studies, such as determining the effects of materials. One could save the volume name in these data products, but that would make their memory and disk footprint large. Furthermore, since many volumes are hit many times, it means that some strings would be repeated often. Root compression likely keeps the disk footprint manageable, but once loaded into memory the memory needed could grow to be large. An obvious solution is to assign an identification label, preferably in a small number of bytes, to each volume name and store the ID value in the hit and track data products. There must also be a mapping table stored somewhere in order to translate the IDs back into the strings for analysis. This table is called the _Physical Volume Store_. 
 
 # Old solution
 
@@ -29,23 +29,23 @@ For `gm2 v7_05_00` and earlier, the solution was to have a 32 bit `int` (signed,
 3. If the name does not exist, push back the name into the vector and return the new index for that name as the ID number.
 4. The calling code then writes the ID number into the data product to represent the volume name. 
 
-The ID to volume name table is simply a vector of strings. The index of the string is the ID number that gets stored in the hit and track data products. For using the IDs, there is a service with a function that can take the ID number and look up the string from the vector. This vector is stored into the _art_ Run record. See below for the relevant code.
+The ID to volume name table is simply a vector of strings. The index of the string in the vector is the ID number that gets stored in the hit and track data products. For using the IDs, there is a service with a function that can take the ID number and look up the string from the vector. This vector is stored into the _art_ Run record. See below for the relevant code.
 
 ## Problems with the old solution
 
-There are several problems with this old solution that uses a vector index as the ID number to represent Geant volume name. 
+There are several problems with this old solution that uses a vector index as the ID number to represent a Geant volume name. 
 
 * The ID number values are dependent on the order of ID number requests. For example, the first Geant volume name gets ID of 0. The second distinct volume name will get ID of 1, and so on. 
 * Because the ID to volume name table depends on the order that the Geant volumes are presented, the table in different files will be different (e.g. a volume in file A will have a different ID number than the same volume has in volume B).
-* Aggregation of the table from the same run in different files is impossible.
+* The situation above means that aggregation of the table from the same run in different files is impossible.
 
 The latter point is a major problem. 
 
 ## Old solution C++ code
 
-The C++ code consists of several key parts (we'll look at )
+The C++ code consists of several key parts.
 
-There is a `artg4::PhysicalVolumeStoreService` that deals with storing the ID to volume name string table. It is also responsible for determining IDs and adding new ones to the table. See below and [here](https://redmine.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/pluginActions/physicalVolumeStore/physicalVolumeStore_service.hh),
+There is a `artg4::PhysicalVolumeStoreService` that deals with creating the ID to volume name string table by determining IDs and adding new ones to the table. See below and [here](https://redmine.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/pluginActions/physicalVolumeStore/physicalVolumeStore_service.hh) for the full file,
 
 ```c++
 // artg4/pluginActions/physicalVolumeStore/physicalVolumeStoreService.hh  (partial listing)
@@ -68,7 +68,7 @@ namespace artg4 {
     
     private:
     
-      // The map
+      // The table
       std::unique_ptr<artg4::PhysicalVolumeStoreData> pvs_;
       
       // ...
@@ -85,7 +85,7 @@ unsigned int artg4::PhysicalVolumeStoreService::idGivenPhysicalVolume(
   return pvs_->idGivenString( pvptr->GetName() );
 }
 ```
-As seen above, users call `artg4::idGivenPhysicalVolme` first gets the name from the volume and passes that to the physical volume store data object. Let's look at that code (see [here](https://redmine.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/pluginActions/physicalVolumeStore/PhysicalVolumeStoreData.hh) )
+As seen above, users call `artg4::idGivenPhysicalVolume`. That code first gets the name from the volume and passes that to the physical volume store data object. Let's look at that code (see [here](https://redmine.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/pluginActions/physicalVolumeStore/PhysicalVolumeStoreData.hh) )
 
 ```c++
 // artg4/pluginActions/physicalVolumeStore/PhysicalVolumeStoreData.hh  (partial listing)
@@ -109,7 +109,7 @@ namespace artg4 {
     // ...
 ```
 
-Much of this code forwards to `artg4::StringIDs` - where the real work happens. Looking at that code (see [here](https://cdcvs.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/util/StringIDs.hh) and [here](https://cdcvs.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/util/StringIDs.cc))
+Much of this code forwards to `artg4::StringIDs` - where the real work happens. The `StringIDs` code (see [here](https://cdcvs.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/util/StringIDs.hh) and [here](https://cdcvs.fnal.gov/redmine/projects/artg4/repository/revisions/33d5/entry/util/StringIDs.cc))
 
 ```c++
 // artg4/pluginActions/util/StringIDs.hh  (partial listing)
@@ -185,13 +185,13 @@ This method is quite simple, but has problems as mentioned above.
 
 # New solution
 
-A new PhysicalVolumeStore is necessary to fix the deficiencies of the old design, and it will likely be included in the next release (`gm2 v7_06_00`). The main problem with the old design is that the ID to volume name table is not consistent from file to file. That is a volume in one file may have a different ID compared to that same volume in another file. The solution is to abandon the simple vector of volume names and the use of its index. The replacement is determining a _hash_ value for the volume name string and then storing a map that links the hash values and the string. A [hash function](https://en.wikipedia.org/wiki/Hash_function) maps arbitrary sized data (e.g. volume name strings) to data with fixed size (the hash values or IDs in this case). The hash function is deterministic in that for a given string, the same ID is always returned. This feature solves the problems of the old solution, as now a particular volume string always corresponds to the same ID value in every file. 
+A new PhysicalVolumeStore is necessary to fix the deficiencies of the old design, and it will likely be included in the next release (`gm2 v7_06_00`). The main problem with the old design is that the ID to volume name table is not consistent from file to file. That is a volume in one file may have a different ID compared to that same volume in another file. The solution is to abandon the simple vector of volume names and the use of its index. The replacement is determining a _hash_ value for the volume name string and then storing a map that links the hash values and the strings. A [hash function](https://en.wikipedia.org/wiki/Hash_function) maps arbitrary sized data (e.g. volume name strings) to data with fixed size (the hash values or IDs in this case). The hash function is deterministic in that for a given string, the same ID is always returned. This feature solves the problems of the old solution, as now a particular volume string always corresponds to the same ID value in every file. 
 
 There are many possible hash functions, including [crc](https://en.wikipedia.org/wiki/Cyclic_redundancy_check) and [md5](https://en.wikipedia.org/wiki/MD5). The former returns 32 bit hash values and the latter 128 bit. The larger sized hash values have a lower chance of a hash _collision_. A collision occurs when, for our case, two different volume name strings resolve to the same hash value. See this nice [article](http://preshing.com/20110504/hash-collision-probabilities/) on this subject. We have over 2000 volumes in our Geant description. With a 32 bit hash, the probability of a collision is around 0.1%. While that may seem low, a collision basically breaks everything. For a 64 bit hash, the chance of a collision is between one in a trillion and one in ten trillion - acceptable! C++14 provides an object that can return a 64 bit hash that we will use: `std::hash`. See this [article](http://en.cppreference.com/w/cpp/utility/hash) for more information. So the new workflow is,
 
 1. Given a Geant volume name string, its 64 bit hash value (ID) is determined with `std::hash`. 
 2. The ID is then looked up in an std::map (key is the ID and value is the string).
-3. If the ID is not in the map, then the (ID, volume name string) pair is added.
+3. If the ID is not in the map, then the <ID, volume name string> pair is added.
 4. If the ID is found in the map, then the corresponding string is checked to ensure it is identical to the string passed in. If they are not identical, then we have a hash collision and all hope is lost. 
 5. The ID is returned to the calling function to be written into a data product. 
 
@@ -201,7 +201,7 @@ When using a volume ID in a data product, that hash is simply looked up in the m
 
 ## New solution C++ code
 
-The only code with appreciable changes are in `StringID`. 
+The only code with appreciable changes is in `StringID`. 
 
 ```c++
 // artg4/pluginActions/util/StringIDs.hh  (partial listing)
@@ -266,7 +266,7 @@ This function, `artg4::StringIDs::idGivenString` follows the workflow discussed 
 
 ## Schema evolution
 
-It is important that code be backwards compatible with old data files. Art, using ROOT's schema evolution system, can transparently handle minor changes in data products from version to version. For example, if a new version of a data product has a new data memmber, old data files without that data member can still be read in; the missing data member will just have random data. If a data member type changes and it is possible to coerce the old type into the new type then this coercision will happen automatically for old files. 
+It is important that code be backwards compatible with old data files. _art_, using ROOT's schema evolution system, can transparently handle minor changes in data products from version to version. For example, if a new version of a data product has a new data member, old data files without that data member can still be read in; the missing data member will just have random data. If a data member type changes and it is possible to coerce the old type into the new type, then this coercion will happen automatically for old files. 
 
 Files with the old Physical Volume Store should be readable with the new code. Fortunately, there is no requirement to turn the old IDs into hashes, as doing so would be extremely difficult. We do, however, want the old poor IDs to be used for lookups to get the volume name strings. 
 
@@ -305,7 +305,7 @@ The new `artg4::StringIDs` has much different internals than the old version of 
 
 See [ROOT's documentation](https://root.cern.ch/root/html/io/DataModelEvolution.html) on schema evolution as well as a nice [example](https://redmine.fnal.gov/redmine/projects/lardataobj/repository/revisions/develop/entry/lardataobj/RecoBase/classes_def.xml) from LArSoft. 
 
-The first thing to note is that version identifiers must be assigned and associated with a checksum. The old version had no identifier, so it will be called version 14. The new version will be caled 15. To determine the checksum, you must set up the execution environment for a particular version (e.g. `setup gm2 v7_05_00` for old and `setup gm2 v7_06_00` for new). You then tell ROOT to load a data file with the objects in question. You can then ask ROOT for the checksum (see below). Note that ROOT will look up the class definition __from the environment__, not from the file (so if you are in the new `v7_06_00` and load an old file, you will get a checksum corresponding to the new class). Here is the code
+The first thing to note is that version identifiers must be assigned and associated with a checksum. The old version had no identifier, so it will be called version 14. The new version will be called 15. To determine the checksum, you must set up the execution environment for a particular version (e.g. `setup gm2 v7_05_00` for old and `setup gm2 v7_06_00` for new). You then tell ROOT to load a data file with the objects in question. You can then ask ROOT for the checksum (see below). Note that ROOT will look up the class definition __from the environment__, not from the file (so if you are in the new `gm2 v7_06_00` environment and load an old file, you will get a checksum corresponding to the new class). Here is the code
 
 ```bash
 #!/bin/bash
@@ -327,13 +327,13 @@ We can then follow the schema evolution section within the `<ioread>` tags in `c
 * `targetClass="artg4::StringIDs"` identifies the destination class of the evolution. In this case, it is the same class 
 * `target="hashToStringMap_"` identifies the destination member data of the evolution. Note that we do not need to give the type as ROOT can figure it out from the environment. 
 * `include=...` Include files the C++ needs, e.g. `#include <vector>`
-* The code is written within the `CDATA` (character data) block. `onfile.X` refers to member `X` of the old version class (the version that is in the file). Here we see the strings from the old `stringVec_` are copied into the new `hashToStringMap_`. So the vector index becomes the hash for lookups (remember, we are not converting to an actual 64 bit hash). 
+* The code is written within the `CDATA` (character data) block. `onfile.X` refers to member `X` of the old version of the class (the version that is in the file). Here we see the strings from the old `stringVec_` are copied into the new `hashToStringMap_`. Therefore, the vector index becomes the hash for lookups (remember, we are not converting to an actual 64 bit hash). 
 
 This schema evolution code will allow old files to be read in by the new code and the volume ID lookups will work. But again - for old files, volume IDs for the same volume name will be different for different files. New Monte Carlo files will need to be produced to take advantage of the new features of the hashed volume names. 
 
 ## Aggregation
 
-The new Physical Volume Store solution allows for objects to be aggregated. Aggregation happens when events from the same run are written across more than one file. See [art's documentation](https://cdcvs.fnal.gov/redmine/projects/art/wiki/Run_and_SubRun_products) for more information. A _Run record_ is always written out at the end of the file, regardless of whether or not the run realy ends there. If you then read in those files from that run and write out _one_ output file, _art_ must figure out how to merge (or aggregate) the run data objects for the "merged" output file. _art_ can do some automatic aggregation (see the documentation mentioned above), but it cannot for the physical volume store. Therefore, aggregation code is written into `PhysicalVolumeStoreData`, shown here...
+The new Physical Volume Store solution allows for objects to be aggregated. Aggregation happens when events from the same run are written across more than one file. See [art's documentation](https://cdcvs.fnal.gov/redmine/projects/art/wiki/Run_and_SubRun_products) for more information. A _Run record_ is always written out at the end of the file, regardless of whether or not the run really ends there. If you then read in those files from that run and write out _one_ output file, _art_ must figure out how to merge (or aggregate) the run data objects for the "merged" output file. _art_ can do some automatic aggregation (see the documentation mentioned above), but it cannot for the physical volume store. Therefore, aggregation code is written into `PhysicalVolumeStoreData`, shown here...
 
 ```c++
 namespace artg4 {
@@ -356,18 +356,18 @@ namespace artg4 {
 // ...
 ```
 
-The `aggregate` method simply loops over the hashes in the Physical Volume Store from the other run (`other`) and adds them to the current run Physical Volume Store by calling `idGivenString` (the returning hash is not needed). This code will also check for hash collisions. Note that the `ids` method is shown and simply returns a `std::vector` of the hash values from the map. 
+The `aggregate` method simply loops over the hashes in the Physical Volume Store from the other run (`other`) and adds them to the current run Physical Volume Store by calling `idGivenString` (the returning hash is not needed). This code will also check for hash collisions. Note that the `ids` method is shown and simply returns a `std::vector` of the hash values (the keys) from the map. 
 
 # Event number overlap ruins files
 
-The Aggregation section above mentions spreading events from the same run over many files. This situation can happen when you launch run several Monte Carlo jobs producing output with the same run and subrun numbers. If this happens, then the event numbers in the files __MUST NOT OVERLAP__. That is no event number can be repeated across all of the files that have the same run and subrun numbers. That is, 
+The Aggregation section above mentions spreading events from the same run over many files. This situation can happen when you launch run several Monte Carlo jobs producing output with the same run and subrun numbers. If this happens, then the event numbers in the files __MUST NOT OVERLAP__. That is no event number can be repeated across all of the files that have the same run and subrun numbers. In table form,  
 
 |File|Run|Subrun|Event range|
 |----|---|------|-----------|
 | A  | 1 | 505  |  1-999    |
 | B  | 1 | 505  |  1-999    |
 
-If you produce a file `C` that is the output from running over `A` and `B` _in the same job_ (so 2 files are reduced to 1), that file `C` will be __unreadable__ by _art_ as you will get a overlapping events exception thrown. There is no way to recover from this problem. You can still analyze files `A` and `B`, but any output _art_ file that is merging will be useless. 
+If you produce a file `C` that is the output from running over `A` and `B` _in the same job_ (so 2 files are reduced to 1), that file `C` will be __unreadable__ by _art_ as you will get a overlapping events exception thrown. There is no way to recover from this problem. You can still analyze files `A` and `B`, but any output _art_ file that is merging will be useless. The only use for file `C` is deletion. 
 
 There are two solutions. 
 
@@ -384,7 +384,7 @@ You will need to know the event range of file `A` to know how to set the FCL fil
 
 ## Different subruns solution
 
-Specifying differnet subrun numbers will also solve this problem. That is, 
+Specifying different subrun numbers will also solve this problem. That is, 
 
 |File|Run|Subrun|Event range|
 |----|---|------|-----------|
@@ -398,9 +398,57 @@ As a general rule, it is a good idea to produce all Monte Carlo files with diffe
 ```bash
 #!/bin/bash
 t=$(mktemp /tmp/myFCL_XXXX.fcl) ; R=$(date +%s) ; cp myFCL.fcl $t ; \\ 
-        echo "source.firstSubRun : $R" >> $t ;  gm2 -c $t
+        echo "source.firstSubRun : $R" >> $t ;  gm2 -c $t ; rm -f $t
 # Note that you can add more options to gm2 like "gm2 -c $t -n 500 -o output.art"
 ```
 
-This code makes a temporary file. It will also use the date and time in integer form (seconds since unix epoch) as the subrun number. The FCL file to run is copied to the tmp area and is altered to set the subrun number. Then production begins using this new FCL file. Every job will get its own subrun number. You can choose other things other than `date`, like `R=$RANDOM` for a truely random integer. 
+This mini-script makes a temporary file. It will also use the date and time in integer form (seconds since unix epoch) as the subrun number. The FCL file to run is copied to the tmp area and is altered to set the subrun number. Then production begins using this new FCL file. Every job will get its own subrun number. You can choose other things other than `date`, like `R=$RANDOM` for a truly random integer. 
 
+# Testing
+
+Unit tests for the Physical Volume Store are difficult as the components mentioned in this document are deep in the system. Instead, behavior tests are included in `gm2analyses`. All of the tests will use the `PhysicalVolumeStoreToFile` analyzer (in `gm2analyses/util`) to output the contents of the physical volume store to a comma separated value (csv) file. This analyzer and the three main tests are described below.  
+
+## Converting the Physical Volume Store to a file
+
+The `PhysicalVolumeStoreToFile` analyzer (in `gm2analyses/util`) has a `beginRun` method that extracts the `artg4::PhysicalVolumeStoreData` object from the event and converts the contents to a comma separated value text file (csv) of the form,
+
+```
+<ID>,<VOLUME NAME STRING>
+...
+```
+
+The name of the csv file is of the form `filename_runX[_Y].csv` where 
+
+* `filename` is a parameter of the analyzer (e.g. "out")
+* `X` is the run number encountered
+* `_Y` is an _optional_ part that will only appear if the run record appears more than once in the job. This will happen if you are inputting more than one file into the job. For example, say you feed files A and B into your job. Both A and B have run records for run 1. The job  will output two csv files, `out_run1.csv` and `out_run1_1.csv` corresponding to the physical volume store in files A and B respectively. Had there been a file C with run 1, then you would have gotten `out_run1_2.csv`. 
+
+__WARNING__ You should delete all `.csv` files from your output area before running this analyzer (or be sure to change the filename). Existing csv files with the same filename will mimic seeing the run repeated and you will not get the csv files you want. 
+
+
+## Testing schema evolution
+
+To test the schema evolution code, a small MDC1 art file made with an old version of the Physical Volume Store corresponding to the "old solution" described above was produced and is stored in the `gm2analyses/test/data` area. That file is processed with the `PhysicalVolumeStoreToFile` analyzer to produce a csv file. That csv file is than compared against a reference version from a correct processing. The files should match if schema evolution is working. 
+
+## Testing "round trip"
+
+There is no need to test `std::hash` itself, but we can test the "round trip" of writing out the physical volume store into an art file and reading it back in again later. We generate 50 MDC1 events to an art file. That should give us a Physical Volume Store with a few hundred volumes in it. We then read in the art file and process with the `PhysicalVolumeStoreToFile` analyzer making a csv file. With a stand-alone C++ program, we then run over each line of the csv file, independently determine the hash from the string, and compare with the stored hash in the csv. The test passes if all of the hash comparisons are successful. 
+
+## Testing aggregation
+
+Testing aggregation is an involved process.
+
+We make two non-overlapping art files...
+
+* A 50 event MDC1 file is generated under Run 1, Subrun 1
+* A 25 event MDC1 file is generated under Run 1, Subrun 1, but the first event starting at 51
+* We make csv files for each using the `PhysicalVolumeStoreToFile` analyzer
+* We check that the csv files are different (they should be as different events were produced)
+
+We then make a "merged" art file by running the `PhysicalVolumeStoreToFile` analyzer over both files in the same job. The job will produce two csv files (one with `_1` as the job sees the same run number twice - once in each file). The two csv files are checked to match the respective csv files from processing the input files individually. 
+
+We also process the merged art file produced in the previous step with the analyzer. This job will invoke the aggregation. One csv file will be produced, and it should be the union of the two csv files from processing the input files individually. That situation is tested. 
+
+# Summary
+
+A new Physical Volume Store is written to make the IDs deterministic and identical for the same volume in different files. This change solves the aggregation problem of the old code. Some notes about how to produce files with the same run number are given. Finally, the tests for the new Physical Volume Store are discussed. 
